[package]
name = "rust"
description = "A tic tac toe bot written in Rust for the Lostcode project."
version = "0.0.1"
edition = "2021"
authors = ["LeviLovie"]
repository = "https://github.com/lostcode-io/examples"

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
serde_json = "1.0.117"
threadpool = "1.8.1"
